@@ -1,3 +1,9 @@
+01/11/2023:
+	- Further update of configure.ac and complete re-write of libtiff and libjpeg m4 autoconf scripts.
+	  This fixes error with clang16 and eliminates all autoconf warnings. make install now also works
+	  correctly and renames and copies iipsrv.fcgi to ${sbin}/iipsrv
+
+
 19/10/2023:
 	- Added new IIIF_DELIMITER configuration parameter to enable page or stack slice selection. Now disabled
 	  by default unless IIIF_DELIMITER is set. Resolves: https://github.com/ruven/iipsrv/issues/261
